<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/signUpContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp40"
            android:paddingRight="@dimen/dp40"
            android:paddingTop="@dimen/dp16"
            tools:context=".user.signup.view.RegisterActivity">

            <LinearLayout
                android:id="@+id/lnHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp20"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp15">

                <ImageView
                    android:id="@+id/civLogo"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@mipmap/ic_mail_profile" />

                <TextView
                    android:id="@+id/txtApitinySignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:gravity="center|top"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="23sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/bg_edt"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_mail_profile" />

                <EditText
                    android:id="@+id/txtEmail"
                    style="@style/textWhite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_below="@id/civLogo"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/your_phone_number"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/cursor_color_accent"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/bg_edt"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_unlock" />

                <EditText
                    android:id="@+id/txtPassword"
                    style="@style/textWhite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/your_pass_word"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_color_accent"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/bg_edt"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_unlock" />

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    style="@style/textWhite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_color_accent"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/bg_edt"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_mail_profile" />

                <EditText
                    android:id="@+id/txtDisplayName"
                    style="@style/textWhite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/displayName"
                    android:inputType="textPersonName"
                    android:textCursorDrawable="@drawable/cursor_color_accent"
                    android:textSize="16sp" />
            </LinearLayout>


            <com.andexert.library.RippleView
                android:id="@+id/rpSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                app:rv_rippleDuration="@integer/ripple_duration">

                <Button
                    android:id="@+id/btnCreateAnAccount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    style="@style/styleButton2PositiveBorder"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/White"
                    android:textSize="16sp" />
            </com.andexert.library.RippleView>

            <com.andexert.library.RippleView
                android:id="@+id/rpLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/styleButtonBigPositiveBorder"
                app:rv_rippleDuration="@integer/ripple_duration_100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/White"
                    android:textSize="16sp" />
            </com.andexert.library.RippleView>
        </LinearLayout>

        <com.andexert.library.RippleView
            android:id="@+id/rpBack"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp60"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dp20"
            app:rv_rippleDuration="@integer/ripple_duration_100">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp15"
                android:paddingTop="@dimen/dp15"
                android:src="@drawable/ic_back_blue" />
        </com.andexert.library.RippleView>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>