<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/imgBack"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:layout_marginTop="10dp"
            app:materialIcon="chevron_left"
            app:materialIconColor="@color/colorPrimary"
            app:materialIconSize="50dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="EMAIL"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dp40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:paddingTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cstPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edt"
                android:padding="10dp">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/imgPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:materialIcon="email"
                    app:materialIconColor="@color/colorPrimary"
                    app:materialIconSize="25dp" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorTransparent"
                    android:hint="@string/your_phone_number"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgPhone"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cstPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edt"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/cstPhoneNumber">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/imgPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:materialIcon="lock"
                    app:materialIconColor="@color/colorPrimary"
                    app:materialIconSize="25dp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorTransparent"
                    android:hint="@string/your_pass_word"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="1111"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgPass"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/rlDadOfCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/cstPass">

                <CheckBox
                    android:id="@+id/checkboxRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true"
                    android:text="@string/remember_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/viewForTourGuide"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp" />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.andexert.library.RippleView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/containerEdt">

            <Button
                style="@style/styleButtonBigPositiveBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin">


            <Button
                style="@style/styleButton2PositiveBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </com.andexert.library.RippleView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
